--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>comine</title>
+    <meta http-equiv="refresh" content="0;url=https://github.com/nichind/comine">
     <link rel="icon" href="favicon.svg" type="image/svg+xml">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -188,6 +189,7 @@
     </style>
 </head>
 <body>
+    <script>window.location.replace('https://github.com/nichind/comine');</script>
     <div class="video-background">
         <video autoplay muted loop playsinline>
             <source src="https://nichind.dev/assets/video/miku.mp4" type="video/mp4">
